Fixing line cutting bug on mobile. Making it more flexible.

--- a/kifi-backend/modules/shoebox/angular/src/keep/keep.styl
+++ b/kifi-backend/modules/shoebox/angular/src/keep/keep.styl
@@ -335,7 +335,6 @@ kifiGreen = #73c583
 .kf-keep-description
   font-size: 16px
   line-height: 23px
-  margin-top: 5px
   font-family: Lato, "Helvetica", Arial, sans-serif
   font-smoothing: antialiased
   color: textBlackColor
